--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -35,5 +35,7 @@
 		form-param3 주소를 처리하는 컨트롤러에서는 name, age의 값을 print 한다. -->
 		
 	<a href="/form3">form3 페이지 이동</a>
+	
+	<a href="medel4">model4 페이지 이동</a>
 </body>
 </html>
