--- a/demo/src/main/resources/templates/model4.html
+++ b/demo/src/main/resources/templates/model4.html
@@ -5,6 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+	<h2>model4.html</h2>
+	<table>
+		<tr th:each="demo: ${list})">
+			<td th:text="${demo.name}"></td>	
+			<td th:text="${demo.age}"></td>
+			</tr>
+		</table>
 </body>
 </html>
